--- a/popup.html
+++ b/popup.html
@@ -5,25 +5,68 @@
     <title>XDEV</title>
     <style>
       body {
-        font-family: sans-serif;
-        padding: 10px;
         width: 200px;
+        padding: 16px;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
       }
-      button {
-        background: black;
-        color: white;
-        border: none;
-        padding: 8px 12px;
+      .toggle-container {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+      }
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      .slider {
+        position: absolute;
         cursor: pointer;
-        border-radius: 6px;
-        width: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        transition: .4s;
+        border-radius: 20px;
+      }
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 16px;
+        width: 16px;
+        left: 2px;
+        bottom: 2px;
+        background-color: white;
+        transition: .4s;
+        border-radius: 50%;
+      }
+      input:checked + .slider {
+        background-color: #2196F3;
+      }
+      input:checked + .slider:before {
+        transform: translateX(20px);
+      }
+      .label {
+        font-size: 14px;
+        color: #333;
       }
     </style>
   </head>
   <body>
-    <h3>XDEV</h3>
-    <button id="start">Activate Inspector</button>
-
+    <div class="toggle-container">
+      <label class="switch">
+        <input type="checkbox" id="inspectorToggle" checked>
+        <span class="slider"></span>
+      </label>
+      <span class="label">Enable Inspector</span>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
